header an part of home

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
-{% extends "base.html" %}
-{% include "components/header.html" %}
-{% block content %}
-
-{% endblock %}
-{% include "components/footer.html" %}
+{% include "./components/header.html" %}
+<div class="bg-image-container">
+    <div class="bg-image"></div>
+    <h1 class="upper-text">IT STEP MERCH <br> <span>Buy our merch</span></h1>
+    <button class="to-catalog-btn">В КАТАЛОГ</button>
+</div>
+{% include "./components/footer.html" %}
