--- a/static/global.css
+++ b/static/global.css
@@ -7,6 +7,7 @@
   --bg-orange: #FEBE28;
   font-family: 'Krona One', sans-serif;
   font-family: "Montserrat", sans-serif;
+  --bg-blue: #0000FF;
 }
 
 * {
@@ -16,7 +17,7 @@
 
 .center-content {
   width: 100%;
-  padding: 0 6% 0 6%;
+  padding: 0 3% 0 3%;
 }
 
 @media (max-width: 768px) {
