--- a/static/home.css
+++ b/static/home.css
@@ -1,4 +1,43 @@
+.bg-image{
+    background-image: url(./public/main-page-bg.png);
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
 
+.bg-image-container{
+    position: relative;
+    width: 100%;
+
+}
+.bg-image-container h1{
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    font-size: 100px;
+}
+
+.bg-image-container h1 span{
+    position: absolute;
+    top: 50%;
+    left: -20%;
+    padding-top: 70px;
+    font-size: 100px;
+}
+
+.to-catalog-btn{
+    color: white;
+    background-color: var(--bg-blue);
+    height: 100px;
+    width: 300px;
+    position: absolute;
+    left: 75%;
+    top: 75%;
+    border-radius: 60px;
+    border: none;
+    font-size: 25px;
+}
 @media (max-width: 768px) {
     
 }
