--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% block styles %} {{ bootstrap.load_css() }} {% endblock %}
+    <link rel="stylesheet" href="../../static/header.css">
+    <link rel="stylesheet" href="../../static/global.css">
+    <link rel="stylesheet" href="../../static/home.css">
+    <link rel="stylesheet" href="../../static/footer.css">
     <title>Document</title>
   </head>
   <body>
     <div class="center-content">
       <header>
+        <div class="header-container">
+          <div class="header-block">
+            <div class="logo">
+              <img src="../../static/public/logo.png" alt="">
+            </div>
+            <div class="container-like-cart">
+             <div class="like-container">
+              <div class="like">
+                <img src="../../static/public/likeIcon.png" alt="">
+              </div>
+              <div class="likes-counter">0</div>
+             </div>
+             <div class="like-container">
+              <div class="like">
+                <img src="../../static/public/cartIcon.png" alt="">
+              </div>
+              <div class="likes-counter">0</div>
+             </div>
+            </div>
+        </div>
+      </div>
       </header>
 </html>
