--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../../static/global.css">
     <link rel="stylesheet" href="../../static/home.css">
     <link rel="stylesheet" href="../../static/footer.css">
+    <link rel="stylesheet" href="../../static/good.css">
+    <link rel="stylesheet" href="../../static/paiment.css">
     <title>Document</title>
   </head>
   <body>
