--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -18,18 +18,18 @@
         <div class="header-container">
           <div class="header-block">
             <div class="logo">
-              <img src="../../static/public/logo.png" alt="">
+              <img src="../../static/public/logo.png" alt="" class="logo-img">
             </div>
             <div class="container-like-cart">
              <div class="like-container">
               <div class="like">
-                <img src="../../static/public/likeIcon.png" alt="">
+                <img src="../../static/public/likeIcon.png" alt="" class="like-img">
               </div>
               <div class="likes-counter">0</div>
              </div>
              <div class="like-container">
               <div class="like">
-                <img src="../../static/public/cartIcon.png" alt="">
+                <img src="../../static/public/cartIcon.png" alt="" class="cart-img">
               </div>
               <div class="likes-counter">0</div>
              </div>
