--- a/static/paiment.css
+++ b/static/paiment.css
@@ -14,6 +14,10 @@ body {
     border: 1px solid #000;
     padding: 20px;
     background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Розподіляє простір між елементами */
+    gap: 10px;
 }
 
 .order-form, .delivery-options, .payment-options {
