--- a/static/header.css
+++ b/static/header.css
@@ -22,23 +22,24 @@
     display: flex;
     height: 100px;
     align-items: center;
-
 }
 
 .likes-counter{
-    font-size: 22px;
-    margin-bottom: 40px;
+    font-size: 20px;
+    margin-bottom: 40px;  
+}
 
-    
+.cart-counter{
+    font-size: 20px;
+    margin-bottom: 40px;  
 }
 
 .logo-img{
-    width: 200px;
-    height: 60px;
+    width: 170px;
 }
 
 .like-img , .cart-img{
-    height: 25px;
+    height: 20px;
 }
 
 @media (max-width: 768px) {
