--- a/static/home.css
+++ b/static/home.css
@@ -1,4 +1,5 @@
-.bg-image{
+.bg-image-welcome-page-container{
+    position: relative;
     background-image: url(./public/main-page-bg.png);
     width: 100%;
     height: 100vh;
@@ -6,19 +7,38 @@
     background-size: contain;
 }
 
-.bg-image-container{
+.bg-image-welcome-page-about-container{
     position: relative;
+    background-image: url(./public/abouy-main-page-bg.png);
     width: 100%;
-
+    height: 85vh;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
-.bg-image-container h1{
+
+.bg-image-welcome-page-container h1{
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 10%;
     font-size: 100px;
 }
 
-.bg-image-container h1 span{
+.bg-image-welcome-page-about-container h1{
+    position: absolute;
+    left: 25%;
+    font-size: 100px;
+    text-transform: uppercase;
+}
+
+.bg-image-welcome-page-about-container h1 span{
+    position: absolute;
+    top: 50%;
+    left: 40%;
+    padding-top: 70px;
+    font-size: 100px;
+}
+
+.bg-image-welcome-page-container h1 span{
     position: absolute;
     top: 50%;
     left: -20%;
@@ -26,17 +46,196 @@
     font-size: 100px;
 }
 
+.bg-image-welcome-page-about-container h2{
+    position: absolute;
+    top: 40%;
+    padding-top: 70px;
+    right: 15%;
+    width: 510px;
+    font-size: 22px;
+    font-weight: 200;
+}
+
 .to-catalog-btn{
     color: white;
     background-color: var(--bg-blue);
-    height: 100px;
-    width: 300px;
+    /* height: 100px;
+    width: 300px; */
+    padding: 30px;
     position: absolute;
     left: 75%;
-    top: 75%;
-    border-radius: 60px;
+    top: 60%;
+    border-radius: 45px;
     border: none;
-    font-size: 25px;
+    font-size: 20px;
+}
+
+.welcome-page-catalog-container h1{
+    font-size: 100px;
+}
+
+.welcome-page-good-container{
+    width: 500px;
+    height: 720px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    margin-bottom: 100px;/*ВИДАЛИТИ ОБОВЯЗКОВО!!!*/
+}
+
+.main-text-catalog{
+    text-transform: uppercase;
+    padding: 40px 0px 40px 0px;
+}
+
+.like-good-catalog{
+    background-image: url(./public/likeIcon.png);
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: contain; 
+    border: none; 
+    outline: none;
+    cursor: pointer;
+    background-color: transparent;
+    transition: 0.1s;
+}
+
+.like-good-catalog.animate {
+    animation: heartbeat 0.45s;
+}
+
+.like-good-catalog:active {
+    background-image: url(./public/likeIcon-hover.png);
+}
+
+@keyframes heartbeat { /*потрібно пофіксити, при кліку на сердечко, анімація рендериться з нуля та дьоргається*/
+    0% {
+        transform: scale(1);
+    }
+    30% {
+        transform: scale(1.2);
+    }
+    50% {
+        transform: scale(1);
+    }
+    80% {
+        transform: scale(1.4);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.like-good-catalog:hover{
+    background-image: url(./public/likeIcon-hover.png);
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: contain; 
+}
+
+.cart-good-catalog{
+    background-image: url(./public/cartIcon.png);
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: contain; 
+    border: none; 
+    outline: none;
+    cursor: pointer;
+    background-color: transparent;
+    transition: 0.1s;
+}
+
+.cart-good-catalog:hover{
+    background-image: url(./public/cartIcon-hover.png);
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-size: contain; 
+}
+
+.cart-good-catalog.animate {
+    animation: cartbeat 0.45s;
+}
+
+.options-good-catalog{
+    padding: 20px;
+    width: 100px;
+    display: flex;
+    justify-content: space-between;
+}
+
+@keyframes cartbeat { /*потрібно пофіксити, при кліку на сердечко, анімація рендериться з нуля та дьоргається*/
+    0% {
+        transform: scale(1);
+    }
+    40% {
+        transform: scale(0.7);
+    }
+    60% {
+        transform: scale(1);
+    }
+    80% {
+        transform: scale(1.3);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.good-item{
+    width: 400px;
+    margin-bottom: 50px;
+}
+
+.options-good-catalog-wrapper{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    text-transform:uppercase;
+    padding: 30px;
+    transition: 15s;
+}
+
+.good-name{
+    text-decoration: none;
+    color: inherit; 
+}
+
+.good-price{
+    color: #0000FF; 
+}
+
+
+.good-item-container {
+    position: relative;
+    width: 450px;
+    margin-bottom: 50px;
+}
+
+.good-item {
+    width: 100%;
+    transition: opacity 0.7s ; 
+}
+
+.good-item-hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0; 
+}
+
+.options-good-catalog-wrapper:hover .good-item-hover {
+    opacity: 1;
+}
+
+.options-good-catalog-wrapper:hover .good-item-original {
+    opacity: 0; 
 }
 
 
