--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
                 <img class="good-item good-item-original" src="../static/public/good-catalog.png" alt="good item"/>
                 <img class="good-item good-item-hover" src="../static/public/good-catalog-hover.png" alt="good item"/>
             </div>
-            <a class="good-name">zrada t-shirt</a>
+            <a class="good-name" href = "{{url_for('good')}}">zrada t-shirt</a>
             <div class="good-price">$100</div>
         </div> 
     </div>
