--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -74,7 +74,27 @@
               <div class="like">
                 <img src="../../static/public/likeIcon.png" alt="" class="like-img">
               </div>
+
               <div class="likes-counter"></div>
+
+              <!-- <div className={styles.likeDropdownChild}></div>
+                <div className={styles.containerForlike}>
+                  <a href="">Manage my account</a>
+                </div>
+                <div className={styles.containerForLike}>
+                  <a href="/dwdw">My order</a>
+                </div>
+                <div className={styles.containerForLike}>
+                  <a href="">My cancellations</a>
+                </div>
+                <div className={styles.containerForLike}>
+                  <a href="">My reviews</a>
+                </div>
+                <div className={styles.containerForLike}>
+                  <a href="">Log out</a>
+                </div>
+              </div> -->
+
              </div>
              <div class="like-container">
               <a href = "{{url_for('paiment')}}" class="like">
