--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../static/home.css">
     <link rel="stylesheet" href="../../static/footer.css">
     <link rel="stylesheet" href="../../static/good.css">
-    <link rel="stylesheet" href="../../static/paiment.css">
+    <link rel="stylesheet" href="../../static/payment.css">
     <title>Document</title>
     <script>
       let cartCounterOnPage = 0
@@ -97,7 +97,7 @@
 
              </div>
              <div class="like-container">
-              <a href = "{{url_for('paiment')}}" class="like">
+              <a href = "{{url_for('payment')}}" class="like">
                 <img src="../../static/public/cartIcon.png" alt="" class="cart-img">
               </a>
               <div class="cart-counter"></div>
