--- a/templates/good.html
+++ b/templates/good.html
@@ -1,43 +1,27 @@
 {% include "./components/header.html" %}
 <div class="goodcontainer">
-    <div class="bg-good-container">
-        <div class="good-img"></div>
+  <div class="bg-good-container">
+    <div class="good-img"></div>
+  </div>
+  <div class="good-info">
+    <div class="good-name">Футболка крута</div>
+    <div class="artcl">Артикул: 00000031425</div>
+    <div class="good-price">100$</div>
+    <div class="color-name">Колір:</div>
+    <div class="colors-available">...</div>
+    <div class="size-name">Розмір:</div>
+    <div class="size-available">S M L</div>
+    <div class="description-header">Опис:</div>
+    <div class="description">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, similique at. Obcaecati, deserunt delectus suscipit adipisci veniam optio corrupti
+      quasi exercitationem quisquam ipsam! Incidunt eos at amet libero nisi maiores.
     </div>
-    <div class="good-info">
-        <div class="good-name">
-            Футболка крута
-        </div>
-        <div class="artcl">
-            Артикул: 00000031425
-        </div>
-        <div class="good-price">
-            100$
-        </div>
-        <div class="color-name">
-            Колір:
-        </div>
-        <div class="colors-available">
-            ...
-        </div>
-        <div class="size-name">
-            Розмір:
-        </div>
-        <div class="size-available">
-            S M L
-        </div>
-        <div class="description-header">Опис:</div>
-        <div class="description">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, similique at. Obcaecati, deserunt delectus suscipit adipisci veniam optio corrupti quasi exercitationem quisquam ipsam! Incidunt eos at amet libero nisi maiores.
-        </div>
-        <div class="composition-and-care-header">
-            Склад та доглад:
-        </div>
-        <div class="composition-and-care">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde quo quae excepturi iusto beatae, numquam repellendus nam tenetur labore inventore odit. Mollitia, saepe facere sequi accusantium id magni quasi dolore.
-        </div>
-        <button class="add-to-cart-btn">
-            ДОДАТИ В КОШИК
-        </button>
+    <div class="composition-and-care-header">Склад та доглад:</div>
+    <div class="composition-and-care">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde quo quae excepturi iusto beatae, numquam repellendus nam tenetur labore inventore
+      odit. Mollitia, saepe facere sequi accusantium id magni quasi dolore.
     </div>
+    <button class="add-to-cart-btn">ДОДАТИ В КОШИК</button>
+  </div>
 </div>
 {% include "./components/footer.html" %}
