--- a/static/global.css
+++ b/static/global.css
@@ -14,6 +14,11 @@
   margin: 0; 
   padding: 0;
   font-family: 'Montserrat', sans-serif;
+  scroll-behavior: smooth;
+}
+
+a{
+  text-decoration: none;
 }
 
 .center-content {
